k8s/springboot-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: springboot-app
  namespace: spring-app-ns

spec:
  replicas: 1

  selector:
    matchLabels:
      app: springboot

  template:
    metadata:
      labels:
        app: springboot

    spec:
      containers:
        - name: springboot
          image: sharfuddin47/spring-boot-crud-with-mysql:latest

          ports:
            - containerPort: 8183

          resources:
            requests:
              cpu: "500m"
              memory: "768Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
