k8s/springboot-service.yml
apiVersion: v1
kind: Service

metadata:
  name: springboot-service
  namespace: spring-app-ns

spec:
  selector:
    app: springboot

  type: NodePort

  ports:
  - port: 8183
    targetPort: 8183
    nodePort: 30083
